# iotc-c-generic-sdk

./: .clang-format  .gitmodules  README.md  README_AWS.md
.github/workflows/: main.yml
doc/: Linux.md  Windows.md
iotc-c-generic-sdk/: CMakeLists.txt
iotc-c-generic-sdk/azure-sdk-impl/src/: azure_sdk_client.c
iotc-c-generic-sdk/include/: iotc_device_client.h  iotconnect.h
iotc-c-generic-sdk/paho-c-impl/src/: iotc_paho_client.c
iotc-c-generic-sdk/src/: iotconnect.c
iotc-generic-c-sdk/: CMakeLists.txt
iotc-generic-c-sdk/azure-sdk-impl/src/: azure_sdk_client.c
iotc-generic-c-sdk/curl-http-impl/include/: iotc_http_request.h
iotc-generic-c-sdk/curl-http-impl/src/: iotc_http_request.c
iotc-generic-c-sdk/include/: iotc_algorithms.h  iotc_device_client.h  iotconnect.h  iotconnect_priv.h
iotc-generic-c-sdk/paho-c-impl/src/: iotc_paho_client.c
iotc-generic-c-sdk/src/: iotc_algorithms.c  iotc_algorithms_alternative.c  iotconnect.c
samples/: README.md
samples/basic-sample/: CMakeLists.txt  main.c
samples/basic-sample/certs/: DeviceCertificate.pem  cert_ssigned21.crt  device.key  pk_ssigned21.pem
samples/basic-sample/config/: app_config.h  app_config.h.BAK_AWS  app_config.h.BAK_AZURE  app_config.h.checkpoint  iotcl_config.h
samples/basic-sample/identity/: README.md
samples/cli-json-sample/: CMakeLists.txt
